range component update switched from px to em, touch support,fix overlap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12022,7 +12022,7 @@ a:hover {
 .carousel-img {
   padding: 35px 0;
   margin: 0 auto;
-  height: 33rem !important;
+  height: 36rem !important;
 }
 
 .carousel-inner-bcolor {
