--- a/resources/assets/sass/app-src.sass
+++ b/resources/assets/sass/app-src.sass
@@ -263,7 +263,7 @@ a:hover
 .carousel-img
     padding: 35px 0
     margin: 0 auto
-    height: 33rem !important
+    height: 36rem !important
 .carousel-inner-bcolor
     background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%)
     background-color: gray
